--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<groupId>br.com.renanlabs</groupId>
 	<artifactId>sales</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>${project.packaging}</packaging>
 
 	<!-- main parent to make spring boot application works -->
 	<parent>
@@ -14,6 +15,27 @@
 		<version>2.2.4.RELEASE</version>
 	</parent>
 
+	<profiles>
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<id>development</id>
+			<properties>
+				<project.packaging>jar</project.packaging>
+				<tomcat.scope>compile</tomcat.scope>
+			</properties>
+		</profile>	
+		
+		<profile>
+			<id>production</id>
+			<properties>
+				<project.packaging>war</project.packaging>
+				<tomcat.scope>provided</tomcat.scope>
+			</properties>
+		</profile>	
+	</profiles>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -26,7 +48,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+		
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>${tomcat.scope}</scope>
+		</dependency>
+		
 		<!-- spring data (version will always be a parent version) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
